# Messaging-C-Plus-Plus

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
examples/: CMakeLists.txt  auth.json  check_message_request_state.cpp  create_contact.cpp  list_messages_from_mrq.cpp  list_senderid.cpp  list_senderid_types.cpp  send_mms.cpp  send_sms.cpp  send_sms_to_grp.cpp  send_sms_to_grp_async.cpp
include/scgapi/: AsyncForwardList.h  Attachment.h  AuthInfo.h  BaseData.h  Bridge.h  Call.h  Channel.h  Contact.h  ContactAddressHistory.h  ContactAddressStatus.h  ContactGroup.h  Keywords.h  Message.h  MessageRequest.h  MessageTemplate.h  ResourceImpl.h  Scg.h  SenderId.h  SenderIdClass.h  SenderIdType.h  Session.h  SessionParams.h
src/: AuthInfo.cpp  CMakeLists.txt  ScgImpl.cpp  SessionImpl.cpp  pch.cpp  scg_api_internals.h
